--- a/spotify-meteor/package.json
+++ b/spotify-meteor/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.2",
     "meteor-node-stubs": "^0.4.1",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-cookie": "^3.0.4",
     "react-dom": "^16.6.0"
