--- a/spotify-meteor/package.json
+++ b/spotify-meteor/package.json
@@ -11,11 +11,17 @@
     "@babel/runtime": "7.0.0-beta.55",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.4",
     "meteor-node-stubs": "^0.4.1",
+    "morgan": "^1.9.1",
     "prop-types": "^15.6.2",
+    "querystring": "^0.2.0",
     "react": "^16.6.0",
     "react-cookie": "^3.0.4",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.6.0",
+    "request": "^2.88.0"
   },
   "meteor": {
     "mainModule": {
